--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Campus Events Dashboard</title>
-  <!-- TODO 0: Link the styles CSS first. -->
-  <!-- <link rel="stylesheet" href="styles.css" /> -->
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header class="site-header">
@@ -14,7 +13,6 @@
   </header>
 
   <main class="container">
-    <!-- SECTION 1: Featured Event -->
     <section id="common-properties" class="card">
       <h2>Featured Event</h2>
       <p class="lead">Don’t miss the most popular event happening soon.</p>
@@ -34,7 +32,6 @@
       </div>
     </section>
 
-    <!-- SECTION 2: Event Details -->
     <section id="fonts-text" class="card">
       <h2>Event Details</h2>
       <article class="copy">
@@ -49,7 +46,6 @@
       </article>
     </section>
 
-    <!-- SECTION 3: Quick Stats -->
     <section id="box-model" class="card">
       <h2>Quick Stats</h2>
       <div class="box-row">
@@ -60,7 +56,6 @@
       <p class="hint">Updated daily based on the student activities calendar.</p>
     </section>
 
-    <!-- SECTION 4: Browse Categories -->
     <section id="flexbox" class="card">
       <h2>Browse Categories</h2>
 
@@ -81,7 +76,6 @@
       </div>
     </section>
 
-    <!-- SECTION 5: Locations & Alerts -->
     <section id="positioning" class="card">
       <h2>Locations & Alerts</h2>
       <div class="position-stage">
@@ -94,16 +88,8 @@
         </div>
 
         <div class="fixed-badge">Live</div>
-
-        <div class="stack a">Map</div>
-        <div class="stack b">Alert</div>
       </div>
-      <p class="hint">Tip: Tap a location to view directions and entry notes.</p>
     </section>
   </main>
-
-  <footer class="site-footer">
-    <small>&copy; 2025 Campus Events</small>
-  </footer>
 </body>
 </html>
